--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
   },
