Fix geolocation issues

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-geolocated": "^3.0.1",
     "react-moment": "^0.9.7",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "use-position": "0.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/use-position": "0.0.0"
   }
 }
